# entity-agents-python

./: CLAUDE.md  FULL-OPTIMIZATION-PYTHON.md  LICENSE  README.md  __init__.py  pyproject.toml
_archived/harper/: __init__.py  config.py
_archived/sugar/: agent.py  config.py
_archived/valentina/: __init__.py  agent.py
amber/: __init__.py  agent.py  config.py
asheton/: __init__.py  agent.py  config.py
brettjr/: __init__.py  agent.py  config.py
chief/: __init__.py  agent.py  config.py
denisy/: __init__.py  agent.py  config.py
docs/: agent-analysis-report.md
harper/: agent.py
maxwell/: __init__.py  agent.py  config.py
quinn/: __init__.py  agent.py  config.py
shared/: __init__.py  base_agent.py  config.py  git.py  github.py  notifier.py
shelly/: __init__.py  agent.py  config.py
sophie/: __init__.py  agent.py  config.py
sugar/: __init__.py
sydney/: __init__.py  agent.py  config.py
tango/: __init__.py  agent.py  config.py
valentina/: agent.py  config.py
vera/: __init__.py  agent.py  config.py
victoria/: __init__.py  agent.py  config.py
